--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-query-devtools": "^5.80.7",
     "axios": "^1.10.0",
     "formik": "^2.4.6",
+    "fortawesome": "^0.0.1-security",
+    "i": "^0.3.7",
     "modern-normalize": "^3.0.1",
     "next": "15.3.3",
+    "npm": "^11.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1",
     "react-hot-toast": "^2.5.2",
     "react-paginate": "^8.3.0",
     "use-debounce": "^10.0.5",
